# sparkify-local

./: .gitignore  README.md  pyproject.toml
scratch/notebooks/: Sparkify-data-processing.ipynb  Sparkify.ipynb
tests/: test_sparkify_local.py
