[tool.poetry]
name = "sparkify_local"
version = "0.1.0"
description = ""
authors = ["K S <8283247+sunnykan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyspark = "^3.1.2"
numpy = "^1.21.2"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
arrow = "^1.1.1"
jupyterlab = "^3.1.10"
ipython = "^7.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
